--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
 <head>
 	<title></title>
-	<script src="functions.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="style.css">
+
+
 </head>
 <body>
 
 	<input type="text" id="listItem">
 	<button onclick="insertItem(listItem)">Insert</button>
 	<button onclick="clearList()">Clear List</button>
-	<div id="list">
-	</div>
+	
+	<div id="list"></div>
 
 </body>
+	<script src="functions.js" type="text/javascript"></script>
 </html>
